apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - name: web
      port: 32400
      targetPort: 32400
